[ios] Fixes DisclosureHeader Accessibility.

Bug: 874047
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I627e2d5d51716d715699792946e8537f5d21ed09
Reviewed-on: https://chromium-review.googlesource.com/1174917
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583261}
Former-commit-id: 9753fedbda50a7e0ee8d4b7baa43d2f3bc9e24b8